Fix - change styles for sign in buttons. In demo mode (when regular and GH buttons are visible), buttons were collapsing

--- a/codebrag-ui/app/styles/index.styl
+++ b/codebrag-ui/app/styles/index.styl
@@ -169,7 +169,10 @@ a.ribbon
 
 .btn-centered-wrapper
   text-align: center;
-
+  .btn:first-child
+    margin-right: 0
+  .btn:last-child
+    margin-left: 0
 
 // left list was here
 @import "left-list.styl"
